# exorr-secret-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
exorr_secret_scanner/: __init__.py  cli.py  patterns.py  report.py  scanner.py
tests/: test_scanner.py
