[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exorr-secret-scanner"
version = "1.0.0"
description = "EXORR Secret Scanner — detect leaked secrets in Git repositories and directories"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "EXORR Security", email = "exorrnull@gmail.com"}]
keywords = ["secret-scanner", "git", "security", "credential-leak", "api-key-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
exorr-secret-scanner = "exorr_secret_scanner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["exorr_secret_scanner*"]
